src/dots/dots_kernel.ss/src/Safir/Dob/Typesystem/Internal/Kernel.h

    typedef void (*DotsC_BytePointerDeleter)(char * &);
    typedef DotsC_Int64 DotsC_Handle;
    typedef enum {DotsC_KeyMode=0, DotsC_ValueMode=1} DotsC_KeyValMode;
    DOTS_KERNEL_API void DotsC_WriteInt64Member(DotsC_Handle writerHandle, DotsC_Int64 val, bool isNull, bool isChanged, DotsC_MemberIndex member, DotsC_Int32 arrayIndex, DotsC_KeyValMode keyValMode);
    DOTS_KERNEL_API void DotsC_WriteFloat32Member(DotsC_Handle writerHandle, DotsC_Float32 val, bool isNull, bool isChanged, DotsC_MemberIndex member, DotsC_Int32 arrayIndex, DotsC_KeyValMode keyValMode);
    DOTS_KERNEL_API void DotsC_WriteFloat64Member(DotsC_Handle writerHandle, DotsC_Float64 val, bool isNull, bool isChanged, DotsC_MemberIndex member, DotsC_Int32 arrayIndex, DotsC_KeyValMode keyValMode);
    DOTS_KERNEL_API void DotsC_WriteBooleanMember(DotsC_Handle writerHandle, bool val, bool isNull, bool isChanged, DotsC_MemberIndex member, DotsC_Int32 arrayIndex, DotsC_KeyValMode keyValMode);
    DOTS_KERNEL_API void DotsC_WriteStringMember(DotsC_Handle writerHandle, const char* val, bool isNull, bool isChanged, DotsC_MemberIndex member, DotsC_Int32 arrayIndex, DotsC_KeyValMode keyValMode);
    DOTS_KERNEL_API void DotsC_WriteHashedMember(DotsC_Handle writerHandle, DotsC_Int64 hash, const char* str, bool isNull, bool isChanged, DotsC_MemberIndex member, DotsC_Int32 arrayIndex, DotsC_KeyValMode keyValMode);
    DOTS_KERNEL_API void DotsC_WriteEntityIdMember(DotsC_Handle writerHandle, DotsC_EntityId val, const char* instanceString, bool isNull, bool isChanged, DotsC_MemberIndex member, DotsC_Int32 arrayIndex, DotsC_KeyValMode keyValMode);
    DOTS_KERNEL_API void DotsC_WriteBinaryMember(DotsC_Handle writerHandle, const char* val, DotsC_Int32 size, bool isNull, bool isChanged, DotsC_MemberIndex member, DotsC_Int32 arrayIndex, DotsC_KeyValMode keyValMode);
    DOTS_KERNEL_API void DotsC_WriteObjectMember(DotsC_Handle writerHandle, const char* blob, bool isNull, bool isChanged, DotsC_MemberIndex member, DotsC_Int32 arrayIndex, DotsC_KeyValMode keyValMode);
    //************************************************************************************
    //* Library exception handling
    //************************************************************************************
    DOTS_KERNEL_API void DotsC_SetException(const DotsC_TypeId exceptionId,
                                            const char * const description);
    DOTS_KERNEL_API void DotsC_AppendExceptionDescription(const char * const moreDescription);
    DOTS_KERNEL_API void DotsC_GetAndClearException(DotsC_TypeId & exceptionId,
                                                    char * & description,
                                                    DotsC_BytePointerDeleter & deleter,
                                                    bool & wasSet);
    DOTS_KERNEL_API void DotsC_PeekAtException(DotsC_TypeId & exceptionId);
    //************************************************************************************
    //* Functions mostly indended for debugging
    //************************************************************************************

    // Function:    DotsC_GetDouFilePathForType
    // Parameters:  typeId      -   Type to find path for

    // Returns:     Pointer to a string containing full path to the dou-file.
    // Comments:    Get the full path to the dou file that the type id represents.
    DOTS_KERNEL_API const char* DotsC_GetDouFilePath(const DotsC_TypeId typeId);
    // Function:    DotsC_TypeRepositoryLoadedByThisProcess
    // Returns:     True if this process created the shared memory and loaded the type repository
    // Comments:    Check if this process created and the shared memory and loaded type repository
    //              or if it just opened it (i.e someone else already created it for us).
    DOTS_KERNEL_API bool DotsC_TypeRepositoryLoadedByThisProcess();
    
    // Function:    DotsC_GetTypeDescription
    // Parameters:  typeId      -   Type to describe. If 0 all types will be completely described. Very much text.
    //              buf         -   Buffer where file text description will be put, will be null terminated.
    //              bufSize     -   size of buf.
    //              resultSize  -   if the buffer was big enough for the description this holds the number
    //                              of bytes written
    //                              if it was too small it holds the size that was needed
    //                              (so resultSize > bufSize ==> try again with bigger buffer)
    //                              Includes the null termination at the end.
    // Returns:     -
    // Comments:    Get a text description of a type or the complete type repository.
    DOTS_KERNEL_API void DotsC_GetTypeDescription(const DotsC_TypeId typeId,
                                                  char * const buf,
                                                  const DotsC_Int32 bufSize,
                                                  DotsC_Int32 & resultSize);