src/dots/dots_dotnet.ss/src/Kernel.cs


		[DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
		internal static extern void DotsC_WriteInt64Member(System.Int64 writerHandle, System.Int64 val, byte isNull, byte isChanged, 
		                                                   System.Int32 member, System.Int32 arrayIndex, KeyValMode keyValMode);

		[DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
		internal static extern void DotsC_WriteFloat32Member(System.Int64 writerHandle, float val, byte isNull, byte isChanged, 
		                                                     System.Int32 member, System.Int32 arrayIndex, KeyValMode keyValMode);

		[DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
		internal static extern void DotsC_WriteFloat64Member(System.Int64 writerHandle, double val, byte isNull, byte isChanged, 
		                                                     System.Int32 member, System.Int32 arrayIndex, KeyValMode keyValMode);

		[DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
		internal static extern void DotsC_WriteBooleanMember(System.Int64 writerHandle, byte val, byte isNull, byte isChanged, 
		                                                     System.Int32 member, System.Int32 arrayIndex, KeyValMode keyValMode);

		[DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
		internal static extern void DotsC_WriteStringMember(System.Int64 writerHandle, System.IntPtr val, byte isNull, byte isChanged, 
		                                                    System.Int32 member, System.Int32 arrayIndex, KeyValMode keyValMode);

		[DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
		internal static extern void DotsC_WriteHashedMember(System.Int64 writerHandle, System.Int64 hash, System.IntPtr str, byte isNull, byte isChanged, 
		                                                    System.Int32 member, System.Int32 arrayIndex, KeyValMode keyValMode);

		[DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
		internal static extern void DotsC_WriteEntityIdMember(System.Int64 writerHandle, DotsC_EntityId val, System.IntPtr instanceString, byte isNull, byte isChanged, 
		                                                      System.Int32 member, System.Int32 arrayIndex, KeyValMode keyValMode);

		[DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
        internal static extern void DotsC_WriteBinaryMember(System.Int64 writerHandle, System.IntPtr val, System.Int32 size, byte isNull, byte isChanged, 
		                                                    System.Int32 member, System.Int32 arrayIndex, KeyValMode keyValMode);

		[DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
		internal static extern void DotsC_WriteObjectMember(System.Int64 writerHandle, System.IntPtr blob, byte isNull, byte isChanged, 
		                                                    System.Int32 member, System.Int32 arrayIndex, KeyValMode keyValMode);

		//************************************************************************************
		//* Library exception handling
		//************************************************************************************
        //DotsC_SetException
        [DllImport(DOTS_KERNEL_NAME, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void DotsC_SetException(System.Int64 exceptionId,
                                                       System.IntPtr description);

		[DllImport(DOTS_KERNEL_NAME, CallingConvention = CallingConvention.Cdecl)]
		internal static extern void DotsC_AppendExceptionDescription(System.IntPtr moreDescription);


        //TODO: re-add this when MONO has fixed their bug
#if FUNC_PTR_WORKAROUND
        [DllImport(DOTS_KERNEL_NAME, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void DotsC_GetAndClearException(out System.Int64 exceptionId,
                                                               out System.IntPtr description,
                                                               out System.IntPtr dummy,
                                                               out byte wasSet);

#else
        //DotsC_GetAndClearException
        [DllImport(DOTS_KERNEL_NAME, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void DotsC_GetAndClearException(out System.Int64 exceptionId,
                                                               out System.IntPtr description,
                                                               out DotsC_BytePointerDeleter deleter,
                                                               out byte wasSet);

#endif
        //DotsC_PeekAtException
        [DllImport(DOTS_KERNEL_NAME, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void DotsC_PeekAtException(out System.Int64 exceptionId);

		//************************************************************************************
		//* Functions mostly indended for debugging
		//************************************************************************************
        //DotsC_GetDouFilePathForType
        [DllImport(DOTS_KERNEL_NAME, CallingConvention = CallingConvention.Cdecl)]
		internal static extern System.IntPtr DotsC_GetDouFilePath(System.Int64 typeId);

		[DllImport(DOTS_KERNEL_NAME, CallingConvention = CallingConvention.Cdecl)]
		internal static extern byte DotsC_TypeRepositoryLoadedByThisProcess();

		[DllImport(DOTS_KERNEL_NAME, CallingConvention = CallingConvention.Cdecl)]
		internal static extern void DotsC_GetTypeDescription(System.Int64 typeId,
		                                              		 System.IntPtr buf,
		                                              		 System.Int32 bufSize,
		                                              		 out System.Int32 resultSize);
      
    }
}
